# aShare

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: system_architecture.md
scripts/: my1stAlgo - V1-min_bar not work in free Tushare.py  my1stAlgo.2.0.py  my1stAlgo.3.0.py
src/ashare/: __init__.py  __main__.py  cli.py  sanitytests.py
src/ashare/config/: __init__.py  loader.py  settings.py
src/ashare/constraints/: __init__.py  ashare.py
src/ashare/data/: __init__.py  loaders.py  normalizers.py  tushare_client.py
src/ashare/data/providers/: __init__.py  baostock_provider.py  base.py  tushare_provider.py
src/ashare/engine/: __init__.py  analyzers.py  cerebro_builder.py  runner.py
src/ashare/strategies/: __init__.py  base.py  mid_freq_ma.py  turnover_filter.py
src/ashare/utils/: __init__.py  logging.py
tests/: conftest.py  test_data_loaders.py  test_engine.py  test_normalizers.py  test_strategies.py
